fixed a silly typo

--- a/theme/colors/light.css
+++ b/theme/colors/light.css
@@ -97,7 +97,7 @@
 	/* Tabs */
 	--gnome-tabbar-tab-color: #2e3436;
 	--gnome-tabbar-tab-background: #dad6d2;
-	--gnome-tabbar-tab-border-color: #bf8bb1; 
+	--gnome-tabbar-tab-border-color: #bfb8b1; 
 	--gnome-tabbar-tab-hover-background: #e1dedb;
 	--gnome-tabbar-tab-hover-border-bottom-color: #b6b6b3;
 	--gnome-tabbar-tab-hover-color: #2e3436;
