--- a/theme/colors/dark.css
+++ b/theme/colors/dark.css
@@ -96,22 +96,23 @@
 
 		/* Tabs */
 		--gnome-tabbar-tab-color: rgb(141, 144, 145);
-		--gnome-tabbar-tab-background: #282828;
-		--gnome-tabbar-tab-border-color: #242424;
-		--gnome-tabbar-tab-hover-background: #2b2b2b;
+		--gnome-tabbar-tab-background: #262626;
+		--gnome-tabbar-tab-border-color: #070707;
+		--gnome-tabbar-tab-hover-background: #2d2d2d;
 		--gnome-tabbar-tab-hover-border-bottom-color: #1b1b1b;
 		--gnome-tabbar-tab-hover-color: rgb(200, 200, 200);
-		--gnome-tabbar-tab-active-background: #2e2e2e;
+		--gnome-tabbar-tab-active-background: #353535;
 		--gnome-tabbar-tab-active-background-contrast: #4c4c4c;
 		--gnome-tabbar-tab-active-border-bottom-color: #15539e;
 		--gnome-tabbar-tab-active-border-bottom-color-contrast: #448de5;
 		--gnome-tabbar-tab-active-color: #ffffff;
-		--gnome-tabbar-tab-active-hover-background: #313131;
+		--gnome-tabbar-tab-active-hover-background: #3C3C3C;
 		--gnome-inactive-tabbar-tab-color: rgb(141, 144, 145);
 		--gnome-inactive-tabbar-tab-background: #2e2e2e;
 		--gnome-inactive-tabbar-tab-active-background: #353535;
 		--gnome-inactive-tabbar-tab-active-border-bottom-color: #15539e;
-		--gnome-inactive-tabbar-tab-active-color: rgb(141, 144, 145);  
+		--gnome-inactive-tabbar-tab-active-color: rgb(141, 144, 145); 
+		--gnome-tabbar-close-hover: #565656;
 	}
 	
 	/* Private window colors */
