--- a/theme/colors/light.css
+++ b/theme/colors/light.css
@@ -96,23 +96,29 @@
 
 	/* Tabs */
 	--gnome-tabbar-tab-color: #2e3436;
-	--gnome-tabbar-tab-background: #dad6d2;
-	--gnome-tabbar-tab-border-color: #bfb8b1; 
-	--gnome-tabbar-tab-hover-background: #e1dedb;
+	--gnome-tabbar-tab-background: #282828;
+	--gnome-tabbar-tab-border-color: #242424; 
+	--gnome-tabbar-tab-hover-background: #2b2b2b;
 	--gnome-tabbar-tab-hover-border-bottom-color: #b6b6b3;
 	--gnome-tabbar-tab-hover-color: #2e3436;
-	--gnome-tabbar-tab-active-background: #ebe9e7;
+	--gnome-tabbar-tab-active-background: #2e2e2e;
 	--gnome-tabbar-tab-active-background-contrast: #f7f5f3;
 	--gnome-tabbar-tab-active-border-bottom-color: #4a90d9;
 	--gnome-tabbar-tab-active-border-bottom-color-contrast: #4a90d9;
 	--gnome-tabbar-tab-active-color: #2e3436;
-	--gnome-tabbar-tab-active-hover-background: #e6e6e6;
+	--gnome-tabbar-tab-active-hover-background: #313131;
 	--gnome-inactive-tabbar-tab-color: #929595;
 	--gnome-inactive-tabbar-tab-background: #eae8e6;
 	--gnome-inactive-tabbar-tab-active-background: #f6f5f4;
 	--gnome-inactive-tabbar-tab-active-border-bottom-color: var(--gnome-tabbar-tab-active-border-bottom-color);
 	--gnome-inactive-tabbar-tab-active-color: var(--gnome-inactive-tabbar-tab-color);
-	--gnome-tabbar-close-hover: #d2d1d1
+
+	--gnome-tabbar-tab-background-new: #262626;
+	--gnome-tabbar-tab-border-color-new: #242424;
+	--gnome-tabbar-tab-hover-background-new: #2d2d2d;
+	--gnome-tabbar-tab-active-background-new: #353535;
+	--gnome-tabbar-tab-active-hover-background-new: #3C3C3C;
+	--gnome-tabbar-close-hover: #d2d1d1;
 }
 
 /* Private window colors */
