--- a/theme/colors/light.css
+++ b/theme/colors/light.css
@@ -96,9 +96,9 @@
 
 	/* Tabs */
 	--gnome-tabbar-tab-color: #2e3436;
-	--gnome-tabbar-tab-background: #282828;
-	--gnome-tabbar-tab-border-color: #242424; 
-	--gnome-tabbar-tab-hover-background: #2b2b2b;
+	--gnome-tabbar-tab-background: #e1dedb;
+	--gnome-tabbar-tab-border-color: #dbd7d4; 
+	--gnome-tabbar-tab-hover-background: #e4e2de;
 	--gnome-tabbar-tab-hover-border-bottom-color: #b6b6b3;
 	--gnome-tabbar-tab-hover-color: #2e3436;
 	--gnome-tabbar-tab-active-background: #2e2e2e;
@@ -113,11 +113,11 @@
 	--gnome-inactive-tabbar-tab-active-border-bottom-color: var(--gnome-tabbar-tab-active-border-bottom-color);
 	--gnome-inactive-tabbar-tab-active-color: var(--gnome-inactive-tabbar-tab-color);
 
-	--gnome-tabbar-tab-background-new: #262626;
-	--gnome-tabbar-tab-border-color-new: #242424;
-	--gnome-tabbar-tab-hover-background-new: #2d2d2d;
-	--gnome-tabbar-tab-active-background-new: #353535;
-	--gnome-tabbar-tab-active-hover-background-new: #3C3C3C;
+	--gnome-tabbar-tab-background-new: #dad6d2;
+	--gnome-tabbar-tab-border-color-new: #bfb8b1;
+	--gnome-tabbar-tab-hover-background-new: #e1dedb;
+	--gnome-tabbar-tab-active-background-new: #ebe9e7;
+	--gnome-tabbar-tab-active-hover-background-new: #e1dedb; /* ? */
 	--gnome-tabbar-close-hover: #d2d1d1;
 }
 
