--- a/theme/colors/light.css
+++ b/theme/colors/light.css
@@ -94,32 +94,29 @@
 	--gnome-switch-active-border-color: #185fb4;
 	--gnome-switch-active-slider-border-color: #185fb4;
 
-	/* Tabs */
+/* Tabs */
 	--gnome-tabbar-tab-color: #2e3436;
 	--gnome-tabbar-tab-background: #e1dedb;
-	--gnome-tabbar-tab-border-color: #dbd7d4; 
+	--gnome-tabbar-tab-border-color: #dbd7d4;
 	--gnome-tabbar-tab-hover-background: #e4e2de;
 	--gnome-tabbar-tab-hover-border-bottom-color: #b6b6b3;
 	--gnome-tabbar-tab-hover-color: #2e3436;
-	--gnome-tabbar-tab-active-background: #2e2e2e;
-	--gnome-tabbar-tab-active-background-contrast: #f7f5f3;
+	--gnome-tabbar-tab-active-background: #ebe9e7;
+	--gnome-tabbar-tab-active-background-contrast: #F7F5F3;
 	--gnome-tabbar-tab-active-border-bottom-color: #4a90d9;
 	--gnome-tabbar-tab-active-border-bottom-color-contrast: #4a90d9;
 	--gnome-tabbar-tab-active-color: #2e3436;
-	--gnome-tabbar-tab-active-hover-background: #313131;
+	--gnome-tabbar-tab-active-hover-background: #e6e6e6;
 	--gnome-inactive-tabbar-tab-color: #929595;
 	--gnome-inactive-tabbar-tab-background: #eae8e6;
 	--gnome-inactive-tabbar-tab-active-background: #f6f5f4;
 	--gnome-inactive-tabbar-tab-active-border-bottom-color: var(--gnome-tabbar-tab-active-border-bottom-color);
 	--gnome-inactive-tabbar-tab-active-color: var(--gnome-inactive-tabbar-tab-color);
 
-	--gnome-tabbar-tab-background-new: #dad6d2;
 	--gnome-tabbar-tab-border-color-new: #bfb8b1;
 	--gnome-tabbar-tab-hover-background-new: #e1dedb;
-	--gnome-tabbar-tab-active-background-new: #ebe9e7;
-	--gnome-tabbar-tab-active-hover-background-new: #e1dedb; /* ? */
 	--gnome-tabbar-close-hover: #d2d1d1;
-}
+} 
 
 /* Private window colors */
 :root {
